--- a/site/content/tools/0-0eth0.md
+++ b/site/content/tools/0-0eth0.md
@@ -2,5 +2,5 @@
 title: "0-0eth0"
 description: ""
 external_category: "Miscellaneous"
----[Visit Website](https://github.com/0-0eth0)
+---[Visit Website](github.com/0-0eth0)
 
